Fix input width shrinking when dropdown opens
Force 100% width on all autocomplete wrapper elements to prevent
layout shift when the panel opens.

--- a/assets/scss/typeahead.scss
+++ b/assets/scss/typeahead.scss
@@ -4,7 +4,13 @@
   width: 100%;
   position: relative;
 
+  // Prevent width changes when panel opens
+  .aa-Autocomplete {
+    width: 100%;
+  }
+
   .aa-Form {
+    width: 100%;
     border: 1px solid var(--bs-border-color);
     border-radius: 0.5rem;
     background-color: var(--bs-body-bg);
@@ -17,12 +23,17 @@
   }
 
   .aa-Input {
+    width: 100% !important;
     background-color: var(--bs-body-bg);
     color: var(--bs-body-color);
 
     &::placeholder {
       color: var(--bs-secondary-color);
     }
+  }
+
+  .aa-InputWrapper {
+    width: 100%;
   }
 
   .aa-InputWrapperPrefix,
